# 3D-Renderer

./: .gitignore  3D_Renderer  CMakeLists.txt  README.md  imgui.ini
demos/demo_LightRoom/: Scene_LightRoom.cpp  Scene_LightRoom.h
demos/demo_SpinningCube/: Scene_SpinningCube.cpp  Scene_SpinningCube.h
include/glad/: glad.h
src/: glad.c  main.cpp
src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Input.cpp  Input.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  Transform.cpp  Transform.h  Window.cpp  Window.h
src/debug/: DebugProfilerUI.cpp  DebugProfilerUI.h  RenderDocIntegration.cpp  RenderDocIntegration.h
src/graphics/: Colour.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshLibrary.cpp  MeshLibrary.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderUtility.cpp  ShaderUtility.h  Vertex.cpp
src/lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/shaders/: FragmentShader.glsl  VertexShader.glsl
src/ui/: App_TopBarUI.cpp  App_TopBarUI.h  DebugProfilerUI.cpp  DebugProfilerUI.h  ImGuiManager.cpp  ImGuiManager.h  UIElement.cpp  UIElement.h
